--- a/index.html
+++ b/index.html
@@ -266,19 +266,19 @@
     <main class="timeline">
         <div id="timeline-progress"></div>
         
-        <div class="checkpoint" data-time-start="05:15" data-time-end="06:00">
+        <div class="checkpoint" data-time-start="05:15" data-time-end="05:30">
             <div class="checkpoint-icon">👥</div>
             <div class="checkpoint-content bg-kumpul">
-                <h3>05.15 - 06.00 WIB - Kumpul</h3>
+                <h3>05.15 - 05.30 WIB - Kumpul</h3>
                 <p class="location-info">📍 Banjarnegara (menyesuaikan)</p>
                 <p>Titik kumpul di lokasi yang ditentukan. Jangan sampai telat ya!</p>
                 <span class="tag">START</span>
             </div>
         </div>
-        <div class="checkpoint" data-time-start="06:00" data-time-end="08:00">
+        <div class="checkpoint" data-time-start="05:30" data-time-end="08:00">
             <div class="checkpoint-icon travel-icon">🚗</div>
             <div class="checkpoint-content bg-travel">
-                <h3>06.00 - 08.00 WIB - OTW Surumanis</h3>
+                <h3>05.30 - 08.00 WIB - OTW Surumanis</h3>
                 <p class="location-info">📍 Banjarnegara - Kebumen</p>
                 <p>Perjalanan menuju destinasi pertama. Siapkan playlist terbaikmu!</p>
                 <span class="tag">Perjalanan</span>
@@ -381,6 +381,7 @@
             <li>✅ Tumblr</li>
             <li>✅ Kaos Putih Kantor</li>
             <li>✅ Jilbab Navy/Hitam</li>
+            <li>✅ Celana Panjang Navy/Hitam</li>
         </ul>
     </section>
 
@@ -477,7 +478,7 @@
                     activeCheckpoint = checkpoint;
                     switch(startTimeStr) {
                         case '05:15': newTitle = "KUMPUL! AYO JANGAN SAMPAI TELAT!"; break;
-                        case '06:00': newTitle = "OTW SURUMANIS LURR!!!"; break;
+                        case '05:30': newTitle = "OTW SURUMANIS LURR!!!"; break;
                         case '08:00': newTitle = "WAKTUNYA SARAPAN!"; break;
                         case '08:30': newTitle = "ENJOY SURUMANIS!"; break;
                         case '09:15': newTitle = "GAMES TIME! SEMANGAT!"; break;
